--- a/header.html
+++ b/header.html
@@ -8,8 +8,23 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <img src="img/logo-platzi-video-BW2.png" alt="platzi logo" class="header-logo">
+  <header class="header">
+    <img src="img/logo-platzi-video-BW2.png" alt="platzi logo" class="header__img">
+    <div class="header__menu">
+      <div class="header__menu--profile">
+        <img src="img/icons8-usuario-masculino-en-círculo-50.png" alt="User">
+        <p>Profile</p>
+      </div>
+      <ul>
+        <li>
+          <a href="/">Account</a>
+        </li>
+        <li>
+          <a href="/">Log out</a>
+        </li>
+      </ul>
+    </div>
   </header>
+  
 </body>
 </html>
