--- a/header.html
+++ b/header.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Platzi Video</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="header">
@@ -25,6 +28,9 @@
       </ul>
     </div>
   </header>
-  
+  <section class="main">
+    <h2 class="main__title">¿Que quieres ver hoy?</h2>
+    <input class="main__input" type="text" placeholder="Buscar..." >
+  </section>
 </body>
 </html>
