--- a/login.html
+++ b/login.html
@@ -5,9 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Platzi video</title>
+  <link rel="stylesheet" href="/login.css">
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header class="header">
     <img src="/img/logo-platzi-video-BW2.png" alt="">
   </header>
   <section class="login">
