--- a/maquetacion-principal.html
+++ b/maquetacion-principal.html
@@ -88,7 +88,11 @@
                     <p class="caroucel-item__details--subtitle">2021 16+ 114 minutos</p>
                 </div>
             </div>
-        </div>
-    </div>
+            
+    <footer class="footer">
+        <a href="/">Terminos de uso</a>
+        <a href="/">Declaracion de privacidad</a>
+        <a href="/">Centro de ayuda</a>
+    </footer>
 </body>
 </html>
