--- a/maquetacion-principal.html
+++ b/maquetacion-principal.html
@@ -27,7 +27,7 @@
     </header>
     <section class="main">
         <h2 class="main__title">¿Que quieres ver hoy?</h2>
-        <input class="main__input" type="text" placeholder="Buscar..." >
+        <input aria-label="Buscar..." class="main__input" type="text" placeholder="Buscar..." >
     </section>
 
     <h2 class="categories__title">Mi lista</h2>
